package com.NguyenThiThuDiep.models;

import java.io.Serializable;

public class Product implements Serializable {
    private String productId;
    private String productName;
    private double price;
    private int quantity;
    private double coupon;
    private double VAT;
    private String categoryId;

    public Product() {
    }

    public Product(String productId, String productName, double price, int quantity, double coupon, double VAT, String categoryId) {
        this.productId = productId;
        this.productName = productName;
        this.price = price;
        this.quantity = quantity;
        this.coupon = coupon;
        this.VAT = VAT;
        this.categoryId = categoryId;
    }

    public String getProductId() {
        return productId;
    }

    public void setProductId(String productId) {
        this.productId = productId;
    }

    public String getProductName() {
        return productName;
    }

    public void setProductName(String productName) {
        this.productName = productName;
    }

    public double getPrice() {
        return price;
    }

    public void setPrice(double price) {
        this.price = price;
    }

    public int getQuantity() {
        return quantity;
    }

    public void setQuantity(int quantity) {
        this.quantity = quantity;
    }

    public double getCoupon() {
        return coupon;
    }

    public void setCoupon(double coupon) {
        this.coupon = coupon;
    }

    public double getVAT() {
        return VAT;
    }

    public void setVAT(double VAT) {
        this.VAT = VAT;
    }

    public String getCategoryId() {
        return categoryId;
    }

    public void setCategoryId(String categoryId) {
        this.categoryId = categoryId;
    }

@Override
public String toString() {
    return productName +
            "\n" + productId +
            "\n" + String.format("%,.0fđ", price) +
            "\n" + quantity +
            "\n" + String.format("%.0f%%", coupon * 100) +
            "\n" + String.format("%.0f%%", VAT * 100) +
            "\n" + categoryId;
}
}
